<resources>
    <string name="app_name">EzStudies</string>
    <string name="textLoginButton">Log in</string>
    <string name="textRegisterButton">Sign up</string>
    <string name="RegistrationText">Registration</string>
    <string name="LoginText">Login</string>

    <!-- FontAwesome -->

    <string name="fa_user">&#xf007;</string>
    <string name="fa_graduation_cap">&#xf19d;</string>
    <string name="fa_group">&#xf0c0;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_check">&#xf046;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_logout">&#xf08b;</string>
    <string name="fa_plus_square">&#xf196;</string>
    <string name="fa_minus_square">&#xf147;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_check_square">&#xf046;</string>

    <!-- Spinner -->
    <string-array name="group_array">
        <item>DA1</item>
        <item>DA2</item>
    </string-array>

    <!-- Drawer resources -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <!-- UserScore strings -->
    <string name="userActivityPoinstText">Activity points</string>
    <string name="publicResultText">Public result</string>
    <string name="addActivityPointsButtonText">Add points</string>
    <string name="confrimPoints">Confirm</string>

    <!-- UserTest string -->
    <string name="addTestButtonText">Add test</string>

    <!-- AddPoints Activity-->
    <string name="addPointsMessage">Add yourself points:</string>


</resources>
