<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mackor.ezstudies.Activities.SignUpActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/LoginText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorText"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/loginForm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <LinearLayout

                android:id="@+id/index_number_row"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/index_number_input_icon"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/fa_graduation_cap"
                    android:textColor="@color/inputIconColor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/index_number_input"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="Index number"
                    android:inputType="number"
                    android:textColor="@color/inputTextColor"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/inputLineSeparator" />

            <LinearLayout

                android:id="@+id/password_row"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/password_input_icon"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/fa_lock"
                    android:textColor="@color/inputIconColor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/inputTextColor"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/inputLineSeparator" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_log_style"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/textLoginButton"
                android:textColor="@color/colorText"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/myProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:visibility="invisible" />
</LinearLayout>
