<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_panel_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mackor.ezstudies.Fragments.UserScoreFragment">

    <RelativeLayout
        android:id="@+id/userScoreFragmentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">




        <RelativeLayout
            android:id="@+id/userActivityPointsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/activityPointsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/userActivityPoinstText"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userActivityPointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="X"
                android:textColor="@color/colorText"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/userPublicResultRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_below="@id/userActivityPointsRow"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/publicResultText"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/publicResultSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/buttonsRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/addActivityPointsButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_add_point_style"
                android:text="@string/addActivityPointsButtonText"
                android:textColor="@color/colorText"
                android:textSize="15sp" />

        </LinearLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/myProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>